# tinyusb

./: CHANGELOG.md  CMakeLists.txt  README.md  idf_component.yml
.github/workflows/: upload_component.yml
examples/device/cdc_dual_ports/src/: tusb_config.h
examples/device/cdc_msc/src/: tusb_config.h
examples/device/cdc_msc_freertos/src/: tusb_config.h
examples/device/cdc_uac2/src/: tusb_config.h
examples/dual/host_hid_to_device_cdc/src/: tusb_config.h
examples/dual/host_info_to_device_cdc/src/: tusb_config.h
src/class/cdc/: cdc_device.c  cdc_device.h
src/class/midi/: midi_device.c  midi_device.h
test/fuzz/device/cdc/src/: tusb_config.h
test/fuzz/device/msc/src/: tusb_config.h
test/fuzz/device/net/src/: tusb_config.h
